<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>iris_distro_catkin</name>
  <version>0.0.0</version>
  <description>The IRIS distro.</description>
  <maintainer email="f.bloechliger@gmail.com">blfabian</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
</package>
